alb-ingress-failure/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-app
  namespace: exercise-07

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web-app

  template:
    metadata:
      labels:
        app: web-app

    spec:
      containers:
        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80
