alb-ingress-failure/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service
  namespace: exercise-07

spec:
  selector:
    app: web-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
